Added basic routing

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,12 @@
-.head{
+.head {
   color: royalblue;
 }
 
-.btn{
+.btn {
   margin-right: 10px;
 }
-.buttons{
+
+.buttons {
   position: absolute;
   right: 10px;
-}
+}/*# sourceMappingURL=app.css.map */
