--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,15 @@
-.head {
-  color: royalblue;
+body {
+  background: rgb(232, 232, 232);
+  background: linear-gradient(344deg, rgb(232, 232, 232) 0%, rgb(183, 216, 244) 100%);
+  background-attachment: fixed;
+}
+
+.prod-card {
+  background-color: #f8f9fa;
+}
+
+h1 {
+  color: #3353ac;
 }
 
 .btn {
@@ -9,4 +19,4 @@
 .buttons {
   position: absolute;
   right: 10px;
-}/*# sourceMappingURL=app.css.map */
+}/*# sourceMappingURL=App.css.map */
